--- a/popup/impressumdatenschutz.html
+++ b/popup/impressumdatenschutz.html
@@ -82,7 +82,7 @@
         San Francisco, CA 94107 <br>
         USA <br> <br>
         Datenschutzerklärung: <a
-            href="https://docs.github.com/de/site-policy/privacy-policies/github-general-privacy-statement">https://docs.github.com/de/site-policy/privacy-policies/github-general-privacy-statement</a>
+            href="https://docs.github.com/de/site-policy/privacy-policies/github-general-privacy-statement" target="_blank">https://docs.github.com/de/site-policy/privacy-policies/github-general-privacy-statement</a>
         <br> <br>
         Proton-Mail für E-Mail-Hosting: <br>
         Ein Angeboten der: <br>
@@ -92,10 +92,10 @@
         Geneva, Switzerland <br> <br>
 
         Allgemeine Datenschutzerklärung: <a
-            href="https://proton.me/de/legal/privacy">https://proton.me/de/legal/privacy</a> <br>
+            href="https://proton.me/de/legal/privacy" target="_blank">https://proton.me/de/legal/privacy</a> <br>
 
         Proton-Mail Datenschutzerklärung: <a
-            href="https://proton.me/de/mail/privacy-policy">https://proton.me/de/mail/privacy-policy</a> <br> <br>
+            href="https://proton.me/de/mail/privacy-policy" target="_blank">https://proton.me/de/mail/privacy-policy</a> <br> <br>
     </div>
     <br><b>Datenerfassung auf dieser Website </b> <br> <br>
 
@@ -127,7 +127,7 @@
 <br>
     <b>Hinweis zur verantwortlichen Stelle</b> <br> <br>
     Christian Prickartz <br>
-    aocalux.com - Datenschutzbeauftragter <br>
+    aocalux.com - Datenschutzbuero <br>
     Wutachweg 1, DG <br>
     76275 Ettlingen <br>
     DEUTSCHLAND <br> <br>
@@ -139,7 +139,7 @@
     E-Mail: <a href="mailto:datenschutz@chris-prickartz.de">datenschutz@chris-prickartz.de</a> <br>
     </div> <br> <br> <br>
 
-    Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a>
+    Quelle: <a href="https://www.e-recht24.de" target="_blank">https://www.e-recht24.de</a>
 </body>
 
 </html>
