--- a/topic/topic-template.html
+++ b/topic/topic-template.html
@@ -21,14 +21,14 @@
     <table>
         <tr>
             <th style="width:25%">Eintrag</th>
-            <th>Erklaerung</th>
+            <th>Erklärung</th>
         </tr>
         <tr>
             <td>
                 b:Wort (Topic - Subtopic)
             </td>
             <td>
-                Erklaerung für das Wort
+                Erklärung für das Wort
             </td>
         </tr>
     </table>
