--- a/popup/about.html
+++ b/popup/about.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h2>About</h2>
-    WIP
+    WIP <br> <br>
+
+    <a href="http://chris-prickartz.de" target="_blank">© Copyright 2025 - C. Prickartz</a>
 </body>
 </html>
