--- a/popup/howtosearch.html
+++ b/popup/howtosearch.html
@@ -11,25 +11,25 @@
     <h2>How to Search</h2>
     Durchsuche die Glossare mit der Suchfunktion deines Browsers (Strg+F oder Cmd+F) nach dem gewünschten Begriff.
     <br><br>
-    <b>Um die Suche zu verfeinern, kannst du deine suche mit dem passenden Präfix beginnen:</b> <br>
+    <b>Um die Suche zu verfeinern, kannst du deine Suche mit dem passenden Präfix beginnen:</b> <br>
     <b>b:</b> - Begriff<br>
     <b>a:</b> - Abkürzung<br>
     <b>s:</b> - Symbol<br>
     <b>p:</b> - Person<br>
     <b>au:</b> - zusammenhängender Ausdruck<br>
     <br>
-    Bspw: Suche nach dem Begriff "Hund" mit dem Präfix "b:" indem du "b:Hund" in die Suchfunktion eingibst.<br>
+    Bspw.: Suche nach dem Begriff "Hund" mit dem Präfix "b:", indem du "b:Hund" in die Suchfunktion eingibst.<br>
     <br>
 
-    Auch die suche nach Begriffen zu einem bestimmten Subthema ist möglich. Suche dafür einmahl nach dem Subthema
-    ausgeschrieben und einmahl nach der im spezigiches Abkürzungesverzeichniss angebenebn Abkürtzung für das Subthema
-    (fals vorhanden). <br> <br>
+    Auch die Suche nach Begriffen zu einem bestimmten Subthema ist möglich. Suche dafür einmal nach dem Subthema
+    ausgeschrieben und einmal nach der im spezifischen Abkürzungsverzeichnis angegebenen Abkürzung für das Subthema
+    (falls vorhanden). <br> <br>
 
-    Da die Globale suche Google verwendet, sind auch komplexere Suchanfragen möglich. Allerdings ist zu beachten das die
-    Indexierung der Seiten durch Google einige Zeit in Anspruch nehmen kann, und somit nicht als zuferlässig angesehen
+    Da die globale Suche Google verwendet, sind auch komplexere Suchanfragen möglich. Allerdings ist zu beachten, dass die
+    Indexierung der Seiten durch Google einige Zeit in Anspruch nehmen kann und somit nicht als zuverlässig angesehen
     werden sollte. <br>
-    Um ein zuverläßliches Suchergebnis zu erhalten, sollte die Suche mit der Suchfunktion des Browsers durchgeführt
-    werden, nachdem du die entsprechende kategorie geöffnet hast. <br>
+    Um ein zuverlässiges Suchergebnis zu erhalten, sollte die Suche mit der Suchfunktion des Browsers durchgeführt
+    werden, nachdem du die entsprechende Kategorie geöffnet hast. <br>
 </body>
 
 </html>
