--- a/popup/symbolerklaerung.html
+++ b/popup/symbolerklaerung.html
@@ -6,29 +6,29 @@
     <title>glossar.chrispri.de</title>
 </head>
 <body>
-    <h2>Symbolerklaerung</h2>
+    <h2>Symbolerklärung</h2>
     <hr>
-    <h3>Kennzeichnung der art des Eintrags:</h3>
-    <b>b: </b> - weist darauf hin, das es sich bei dem eintrag um einen Begriff handelt<br>
-    <b>a: </b> - weist darauf hin, das es sich bei dem eintrag um eine Abkuerzung handelt<br>
-    <b>s: </b> - weist darauf hin, das es sich bei dem eintrag um einen Symbol handelt<br>
-    <b>p: </b> - weist darauf hin, das es sich bei dem eintrag um eine Person handelt<br>
-    <b>au: </b> - weist darauf hin, das es sich bei dem eintrag um eine zusammenhaengenden ausdruck handelt<br>
+    <h3>Kennzeichnung der Art des Eintrags:</h3>
+    <b>b: </b> - weist darauf hin, dass es sich bei dem Eintrag um einen Begriff handelt<br>
+    <b>a: </b> - weist darauf hin, dass es sich bei dem Eintrag um eine Abkürzung handelt<br>
+    <b>s: </b> - weist darauf hin, dass es sich bei dem Eintrag um ein Symbol handelt<br>
+    <b>p: </b> - weist darauf hin, dass es sich bei dem Eintrag um eine Person handelt<br>
+    <b>au: </b> - weist darauf hin, dass es sich bei dem Eintrag um einen zusammenhängenden Ausdruck handelt<br>
     <br>
-    Bspw: b:Hund, a:HTML, s:€, p:Einstein, au:World Wide Web<br>
+    Bspw.: b:Hund, a:HTML, s:€, p:Einstein, au:World Wide Web<br>
     <br>
 
     <h3>Nach dem Wort folgende Spezifikationen:</h3>
-    <b>(Thema - Subthema)</b> - gibt an, zu welchem Thema und Subthema der Eintrag gehoert<br>
+    <b>(Thema - Subthema)</b> - gibt an, zu welchem Thema und Subthema der Eintrag gehört<br>
     <br>
-    Bspw: b:Hund (Tier - Haustier), a:HTML (Informatik - Programmiersprache)<br>
-    Es können auch Abkürzungen für die Themen verwendet werden vgl. spezigiches Abkürzungesverzeichniss<br>
+    Bspw.: b:Hund (Tier - Haustier), a:HTML (Informatik - Programmiersprache)<br>
+    Es können auch Abkürzungen für die Themen verwendet werden, vgl. spezifisches Abkürzungsverzeichnis<br>
     <br>
 
     <h3>Weitere Kennzeichnungen:</h3>
-    <b>*</b> - weist darauf hin, das es sich um einen veralteten Begriff handelt (neuer Begriff s. Erklaerung)<br>
-    <b>~</b> - weisst darauf hin, das für den Begriff ein vorschlag für einen alternativen Begriff besteht (s. Erklaerung)<br>
+    <b>*</b> - weist darauf hin, dass es sich um einen veralteten Begriff handelt (neuer Begriff s. Erklärung)<br>
+    <b>~</b> - weist darauf hin, dass für den Begriff ein Vorschlag für einen alternativen Begriff besteht (s. Erklärung)<br>
     <br>
-    Bspw: b:Fräulein* (neuer Begriff: Frau), au:Master Branch ~ (alternativer Begriff: Main Branch)<br>
+    Bspw.: b:Fräulein* (neuer Begriff: Frau), au:Master Branch ~ (alternativer Begriff: Main Branch)<br>
 </body>
 </html>
