--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <big><b>Themen:</b></big> <br>
     <table>
         <tr>
-            <td><a href="/topic/topic-template.html">Template</a></td>
+            <td><a href="/topic/spezifisches-Abkürzungsverzeichnis.html">spezifisches Abkürzungsverzeichnis</a></td>
         </tr>
     </table>
 
