--- a/topic/topic-template.html
+++ b/topic/topic-template.html
@@ -23,14 +23,8 @@
             <th style="width:25%">Eintrag</th>
             <th>Erklärung</th>
         </tr>
-        <tr>
-            <td>
-                b:Wort (Topic - Subtopic)
-            </td>
-            <td>
-                Erklärung für das Wort
-            </td>
-        </tr>
+        
+        <tr><td>b:Wort (Topic - Subtopic)</td><td>Erklärung für das Wort</td></tr>
     </table>
 
 
