Add new abbreviations to specific abbreviation list

--- a/topic/spezifisches-Abkürzungsverzeichnis.html
+++ b/topic/spezifisches-Abkürzungsverzeichnis.html
@@ -35,11 +35,13 @@
 <tr><td>a:ETH (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Ethik</i>.</td></tr>
 <tr><td>a:GFS (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Gleichwertige Feststellung von Schülerleistungen</i>.</td></tr>
 <tr><td>a:GGK (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Geschichte mit Gemeinschaftskunde</i>.</td></tr>
+<tr><td>a:HSB (speziAbkür - Studium)</td><td>Abkürtzung für <i>Hochschulbibliothek</i>.</td></tr>
 <tr><td>a:HW (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Hardware</i>.</td></tr>
 <tr><td>a:IMG (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Bilder</i>.</td></tr>
 <tr><td>a:INF (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Informatik</i>.</td></tr>
 <tr><td>a:INFO (speziAbkür - Studium)</td><td>Abkürtzung für <i>Informatik</i>.</td></tr>
 <tr><td>a:INFT (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Gleichwertige Informationstechnik</i>.</td></tr>
+<tr><td>a:IO (speziAbkür - Studium)</td><td>Abkürtzung für <i>International Office</i>.</td></tr>
 <tr><td>a:J1 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 1</i>.</td></tr>
 <tr><td>a:J11 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 1 Halbjahr 1</i>.</td></tr>
 <tr><td>a:J12 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 1 Halbjahr 2</i>.</td></tr>
@@ -47,6 +49,8 @@
 <tr><td>a:J21 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 2 Halbjahr 1</i>.</td></tr>
 <tr><td>a:J22 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 2 Halbjahr 2</i>.</td></tr>
 <tr><td>a:KLAUS (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Klausuren</i>.</td></tr>
+<tr><td>a:LLL (speziAbkür - Studium)</td><td>Abkürtzung für <i>Lehr-Lern-Labor</i>.</td></tr>
+<tr><td>a:LLZ (speziAbkür - Studium)</td><td>Abkürtzung für <i>Lehr-Lern-Zentrum</i>.</td></tr>
 <tr><td>a:M (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Mathematik</i>.</td></tr>
 <tr><td>a:M1 (speziAbkür - Studium)</td><td>Abkürtzung für <i>Modul 1</i> / Modul X.</td></tr>
 <tr><td>a:OEP (speziAbkür - Studium)</td><td>Abkürtzung für <i>Orientierungs- und Einführungspraktikum</i>.</td></tr>
@@ -54,6 +58,7 @@
 <tr><td>a:PH (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Physik</i></td>.</tr>
 <tr><td>a:PH-KA (speziAbkür - Studium)</td><td>Abkürtzung für <i>Pädagogische Hochschule Karlsruhe</i>. Auch abgekürzt: <i>a:PHKA</i></td></tr>
 <tr><td>a:PH-LÜ (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Physik Laborübungen</i>.</td></tr>
+<tr><td>a:PO (speziAbkür - Studium)</td><td>Abkürtzung für <i>Prüfungsordnungen</i>.</td></tr>
 <tr><td>a:PROJ (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Projekte</i>.</td></tr>
 <tr><td>a:SEM (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Seminarkurs</i>.</td></tr>
 <tr><td>a:SoSe (speziAbkür - Studium)</td><td>Abkürtzung für <i>Sommersemester</i>.</td></tr>
@@ -61,14 +66,17 @@
 <tr><td>a:speziAbkür (speziAbkür - Kategorien)</td><td>Abkürtzung für <i>spezifisches Abkürzungsverzeichnis</i>.</td></tr>
 <tr><td>a:SPO (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Sport</i>.</td></tr>
 <tr><td>a:SPS (speziAbkür - Studium)</td><td>Abkürtzung für <i>Schulpraktischen Studien</i>.</td></tr>
+<tr><td>a:SSZ (speziAbkür - Studium)</td><td>Abkürtzung für <i>Studien-Service-Zentrum</i>.</td></tr>
 <tr><td>a:SW (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Software</i>.</td></tr>
+<tr><td>a:SWS (speziAbkür - Studium)</td><td>Abkürtzung für <i>Semesterwochenstunden</i>.</td></tr>
 <tr><td>a:TG (speziAbkür - Schule)</td><td>Abkürtzung für <i>Technisches Gymnasium</i>.</td></tr>
 <tr><td>a:VL (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Vorlagen</i>.</td></tr>
 <tr><td>a:WiSe (speziAbkür - Studium)</td><td>Abkürtzung für <i>Wintersemester</i>.</td></tr>
 <tr><td>a:WL (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Wirtschaftslehre</i>.</td></tr>
 <tr><td>a:Zettel (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Informationszettel</i>.</td></tr>
 <tr><td>a:Zettel_AUSGE (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Informationszettel ausgefüllt</i>.</td></tr>
-
+<tr><td>a:ZIM (speziAbkür - Studium)</td><td>Abkürtzung für <i>Zentrum für Informationstechnologie und Medien</i>.</td></tr>
+        
 
 
     </table>
