Correct abbreviation for Informationstechnik

--- a/topic/spezifisches-Abkürzungsverzeichnis.html
+++ b/topic/spezifisches-Abkürzungsverzeichnis.html
@@ -40,7 +40,7 @@
 <tr><td>a:IMG (speziAbkür - Ordner)</td><td>Abkürtzung für <i>Bilder</i>.</td></tr>
 <tr><td>a:INF (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Informatik</i>.</td></tr>
 <tr><td>a:INFO (speziAbkür - Studium)</td><td>Abkürtzung für <i>Informatik</i>.</td></tr>
-<tr><td>a:INFT (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Gleichwertige Informationstechnik</i>.</td></tr>
+<tr><td>a:INFT (speziAbkür - Fächer)</td><td>Abkürtzung für <i>Informationstechnik</i>.</td></tr>
 <tr><td>a:IO (speziAbkür - Studium)</td><td>Abkürtzung für <i>International Office</i>.</td></tr>
 <tr><td>a:J1 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 1</i>.</td></tr>
 <tr><td>a:J11 (speziAbkür - Schule)</td><td>Abkürtzung für <i>Jahrgangsstufe 1 Halbjahr 1</i>.</td></tr>
