Füge die Seite für Informatik mit Erklärungen und Einträgen hinzu

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
     <big><b>Themen:</b></big> <br>
     <table>
-        <tr>
-            <td><a href="/topic/spezifisches-Abkürzungsverzeichnis.html">spezifisches Abkürzungsverzeichnis</a></td>
-        </tr>
+        <tr><td><a href="/topic/informatik.html">Informatik</a></td></tr>
+        <tr><td><a href="/topic/spezifisches-Abkürzungsverzeichnis.html">spezifisches Abkürzungsverzeichnis</a></td></tr>
     </table>
 
     <script src="/script/popup.js"></script>
